--- a/_modules/scripts/engine/core/world.html
+++ b/_modules/scripts/engine/core/world.html
@@ -1454,8 +1454,8 @@
 
     <span class="c1"># ensure they are the right target type</span>
     <span class="k">if</span> <span class="n">tile_has_tags</span><span class="p">(</span><span class="n">user</span><span class="p">,</span> <span class="n">skill_cast</span><span class="o">.</span><span class="n">target_tile</span><span class="p">,</span> <span class="n">skill_cast</span><span class="o">.</span><span class="n">target_tags</span><span class="p">):</span>
-        <span class="n">skill_cast</span><span class="o">.</span><span class="n">use</span><span class="p">()</span>
-        <span class="k">return</span> <span class="kc">True</span>
+        <span class="n">result</span> <span class="o">=</span> <span class="n">skill_cast</span><span class="o">.</span><span class="n">use</span><span class="p">()</span>
+        <span class="k">return</span> <span class="n">result</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Could not use skill, target tile does not have required tags (</span><span class="si">{</span><span class="n">skill</span><span class="o">.</span><span class="n">target_tags</span><span class="si">}</span><span class="s2">)."</span><span class="p">)</span>
 
@@ -1466,6 +1466,8 @@
     <span class="sd">"""</span>
 <span class="sd">    Resolve the skill's effects. Returns True is successful if criteria to apply skill was met, False if not.</span>
 <span class="sd">    """</span>
+    <span class="n">success</span> <span class="o">=</span> <span class="kc">None</span>
+
     <span class="c1"># ensure they are the right target type</span>
     <span class="k">if</span> <span class="n">tile_has_tags</span><span class="p">(</span><span class="n">skill</span><span class="o">.</span><span class="n">user</span><span class="p">,</span> <span class="n">skill</span><span class="o">.</span><span class="n">target_tile</span><span class="p">,</span> <span class="n">skill</span><span class="o">.</span><span class="n">target_tags</span><span class="p">):</span>
         <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="n">effects</span> <span class="ow">in</span> <span class="n">skill</span><span class="o">.</span><span class="n">apply</span><span class="p">():</span>
@@ -1473,8 +1475,16 @@
                 <span class="n">effect_queue</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">effects</span><span class="p">)</span>
                 <span class="k">while</span> <span class="n">effect_queue</span><span class="p">:</span>
                     <span class="n">effect</span> <span class="o">=</span> <span class="n">effect_queue</span><span class="o">.</span><span class="n">pop</span><span class="p">()</span>
-                    <span class="n">effect_queue</span><span class="o">.</span><span class="n">extend</span><span class="p">(</span><span class="n">effect</span><span class="o">.</span><span class="n">evaluate</span><span class="p">()[</span><span class="mi">1</span><span class="p">])</span>
-        <span class="k">return</span> <span class="kc">True</span>
+                    <span class="n">result</span><span class="p">,</span> <span class="n">new_effects</span> <span class="o">=</span> <span class="n">effect</span><span class="o">.</span><span class="n">evaluate</span><span class="p">()</span>
+                    <span class="n">effect_queue</span><span class="o">.</span><span class="n">extend</span><span class="p">(</span><span class="n">new_effects</span><span class="p">)</span>
+
+                    <span class="c1"># only take result of initial effect</span>
+                    <span class="k">if</span> <span class="ow">not</span> <span class="n">success</span><span class="p">:</span>
+                        <span class="n">success</span> <span class="o">=</span> <span class="n">result</span>
+        <span class="k">if</span> <span class="n">success</span><span class="p">:</span>
+            <span class="k">return</span> <span class="kc">True</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="k">return</span> <span class="kc">False</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span>
             <span class="sa">f</span><span class="s1">'Could not apply skill "</span><span class="si">{</span><span class="n">skill</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="si">}</span><span class="s1">", target tile does not have required '</span>
